hw03-kubernetes/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
  labels:
    app: health-service
spec:
  selector:
    app: health-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
