hw03-kubernetes/k8s/ingress-otusapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-service-otusapp
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/gustinov(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: health-service
                port:
                  number: 8000
